--- a/build.yaml
+++ b/build.yaml
@@ -5,8 +5,8 @@
 # pass flags to the build command, `snippet` to add a Zephyr snippet, and
 # `artifact-name` to assign a name to distinguish build outputs from each other:
 #
-board: [ "nice_nano_v2" ]
-shield: [ "t_rex" ]
+# board: [ "nice_nano_v2" ]
+# shield: [ "t_rex" ]
 # include:
 #   - board: bdn9_rev2
 #   - board: nice_nano_v2
@@ -18,3 +18,5 @@ shield: [ "t_rex" ]
 #     artifact-name: corne_left_with_studio
 #
 ---
+board: [ "nice_nano_v2" ]
+shield: [ "t_rex" ]
