--- a/build.yaml
+++ b/build.yaml
@@ -20,5 +20,6 @@
 ---
 board: [ "nice_nano_v2" ]
 shield: [ "t_rex" ]
+include:
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
