--- a/build.yaml
+++ b/build.yaml
@@ -21,5 +21,8 @@
 board: [ "nice_nano_v2" ]
 shield: [ "t_rex" ]
 include:
+  - board: nice_nano_v2
+    shield: t_rex
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
+    artifact-name: t_rex_with_studio
